# Chris.ai

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: __init__.py  config.py  db.py  main.py  sample_turn.py  seed.py
backend/app/agent/: __init__.py  chris.py
backend/app/agent/prompts/: __init__.py  render.py  system_chris.md
backend/app/agent/prompts/partials/: communication_style.md  document_rules.md  (+4 more)
backend/app/agent/providers/: anthropic_provider.py  base.py  factory.py  openai_provider.py
backend/app/agent/tools/: __init__.py  documents.py  escalation.py  executor.py  messaging.py  plan.py  provider_sourcing.py  registry.py  schemas.py  web_search.py
backend/app/api/: auth.py  health.py  portal.py
backend/app/api/supervisor/: __init__.py  dashboard.py  intervention.py
backend/app/api/webhooks/: __init__.py  email.py  twilio.py  whatsapp.py
backend/app/domain/: __init__.py  models.py  schemas.py
backend/app/domain/repositories/: __init__.py  context.py  documents.py  memory.py  plans.py  providers.py  serialization.py
backend/app/integrations/: __init__.py  email_stub.py  slng_stub.py  tavily.py  voice_stub.py  whatsapp_stub.py
backend/app/orchestration/: __init__.py  alerts.py  intervention.py  isolation.py  router.py
backend/tests/prompt_evals/: README.md  __init__.py  harness.py  judges.py
backend/tests/unit/: test_isolation.py  test_voice_webhook.py
(+35 files in other folders)
