[project]
name = "chris-ai-backend"
version = "0.1.0"
description = "FastAPI backend and agent prompt layer for Chris.AI"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14.0",
    "fastapi>=0.115.6",
    "httpx>=0.28.1",
    "openai>=2.25.0",
    "openai-agents>=0.8.4",
    "psycopg[binary]>=3.2.3",
    "pydantic>=2.10.4",
    "pydantic-settings>=2.7.1",
    "pyyaml>=6.0.2",
    "sqlalchemy>=2.0.36",
    "uvicorn[standard]>=0.34.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.4"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"
